welcome.lessons.welcome.bat.bool2.In1To10.scala.error
in1To10:9: error: type mismatch;
 found   : Unit
 required: Boolean
		bool = true;
                     ^in1To10:7: error: type mismatch;
 found   : Unit
 required: Boolean
		if(a >= 10 && a<=20)
                ^in1To10:16: error: type mismatch;
 found   : Unit
 required: Boolean
		bool = true;
                     ^in1To10:14: error: type mismatch;
 found   : Unit
 required: Boolean
		if(a <= 10 && a >= 20)
                ^